<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">

    <TextView
        android:id="@+id/popUpText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/helpTitle"
        android:gravity="center"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/helpText"
        android:gravity="center"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center|bottom">

        <Button
            android:id="@+id/popUpButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/doneHelp"
            android:layout_weight="1"/>



    </LinearLayout>

</LinearLayout>